--- a/ExitTask.Presentation/Areas/Admin/Views/GeoManagement/AddCity.cshtml
+++ b/ExitTask.Presentation/Areas/Admin/Views/GeoManagement/AddCity.cshtml
@@ -19,25 +19,23 @@
             <legend>Legend</legend>
             @(this.Html.ValidationSummary(true, "", new { @class = "text-danger" }))
             <div class="form-group">
-                @(this.Html.LabelFor(model=>model.Name, Resource.Name, new { @class = "control-label col-md-2 floating-label" }))
                 <div class="col-md-10">
-                    @(this.Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control floating-label" } }))
+                    @(this.Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control floating-label", placeholder = Resource.Name } }))
                     @(this.Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" }))
                 </div>
             </div>
 
             <div class="form-group">
-                @(this.Html.Label(Resource.Description, new { @class = "control-label col-md-2 floating-label" }))
                 <div class="col-md-10">
-                    @(this.Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control floating-label " } }))
+                    @(this.Html.TextAreaFor(model => model.Description, new { @class = "form-control floating-label", placeholder = Resource.Description, rows = "5" } ))
                     @(this.Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" }))
                 </div>
             </div>
 
             <div class="form-group">
-                @(this.Html.Label(Resource.Country, new { @class = "control-label col-md-2 floating-label" }))
                 <div class="col-md-10">
-                    @(this.Html.DropDownListFor(model => model.CountryId, this.Model.Countries, new { @class = "form-control floating-label" }))
+                    @(this.Html.DropDownListFor(model => model.CountryId, this.Model.Countries, new { @class = "form-control floating-label", placeholder = Resource.Country }))
+                    @(this.Html.ValidationMessageFor(model => model.CountryId, "", new { @class = "text-danger" }))
                 </div>
             </div>
 
