--- a/ExitTask.Presentation/Areas/Admin/Views/GeoManagement/AddCountry.cshtml
+++ b/ExitTask.Presentation/Areas/Admin/Views/GeoManagement/AddCountry.cshtml
@@ -19,25 +19,22 @@
             <legend>Legend</legend>
             @(this.Html.ValidationSummary(true, "", new { @class = "text-danger" }))
             <div class="form-group">
-                @(this.Html.Label(Resource.Name, new { @class = "control-label col-md-2" }))
                 <div class="col-md-10">
-                    @(this.Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } }))
+                    @(this.Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control floating-label", placeholder = Resource.Name } }))
                     @(this.Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" }))
                 </div>
             </div>
 
             <div class="form-group">
-                @(this.Html.Label(Resource.Description, new { @class = "control-label col-md-2" }))
                 <div class="col-md-10">
-                    @(this.Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } }))
+                    @(this.Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control floating-label", placeholder = Resource.Description } }))
                     @(this.Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" }))
                 </div>
             </div>
 
             <div class="form-group">
-                @(this.Html.Label(Resource.Mainland, new { @class = "control-label col-md-2" }))
                 <div class="col-md-10">
-                    @(this.Html.EnumDropDownListFor(model => model.Mainland, new { @class = "form-control floating-label" }))
+                    @(this.Html.EnumDropDownListFor(model => model.Mainland, new { @class = "form-control floating-label", placeholder = Resource.Mainland }))
                     @(this.Html.ValidationMessageFor(model => model.Mainland, "", new { @class = "text-danger" }))
                 </div>
             </div>
