--- a/ExitTask.Presentation/Areas/Security/Views/Authorization/SignIn.cshtml
+++ b/ExitTask.Presentation/Areas/Security/Views/Authorization/SignIn.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExitTask.Presentation.Areas.Security.Models.UserAuthorizationViewModel
+﻿@using Resources
+@model ExitTask.Presentation.Areas.Security.Models.UserAuthorizationViewModel
 
 @{
     this.ViewBag.Title = "SignIn";
@@ -16,7 +17,7 @@
         <hr />
         @(this.Html.ValidationSummary(true, "", new { @class = "text-danger" }))
         <div class="form-group">
-            @(this.Html.Label(Resources.Resource.Email ,new { @class = "control-label col-md-2" }))
+            @(this.Html.Label(Resource.Email ,new { @class = "control-label col-md-2" }))
             <div class="col-md-10">
                 @(this.Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } }))
                 @(this.Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" }))
@@ -24,7 +25,7 @@
         </div>
 
         <div class="form-group">
-            @(this.Html.Label(Resources.Resource.Password, new { @class = "control-label col-md-2" }))
+            @(this.Html.Label(Resource.Password, new { @class = "control-label col-md-2" }))
             <div class="col-md-10">
                 @(this.Html.PasswordFor(model => model.Password, new { @class = "form-control" }))
                 @(this.Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" }))
