--- a/ExitTask.Presentation/Areas/Security/Views/Registration/SignUp.cshtml
+++ b/ExitTask.Presentation/Areas/Security/Views/Registration/SignUp.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExitTask.Presentation.Areas.Security.Models.UserRegistrationViewModel
+﻿@using Resources
+@model ExitTask.Presentation.Areas.Security.Models.UserRegistrationViewModel
 
 @{
     this.ViewBag.Title = "SignUp";
@@ -16,7 +17,7 @@
         <hr />
         @(this.Html.ValidationSummary(true, "", new { @class = "text-danger" }))
         <div class="form-group">
-            @(this.Html.Label(Resources.Resource.FirstName, new { @class = "control-label col-md-2" }))
+            @(this.Html.Label(Resource.FirstName, new { @class = "control-label col-md-2" }))
             <div class="col-md-10">
                 @(this.Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } }))
                 @(this.Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" }))
@@ -24,7 +25,7 @@
         </div>
 
         <div class="form-group">
-            @(this.Html.Label(Resources.Resource.LastName, new { @class = "control-label col-md-2" }))
+            @(this.Html.Label(Resource.LastName, new { @class = "control-label col-md-2" }))
             <div class="col-md-10">
                 @(this.Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } }))
                 @(this.Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" }))
@@ -32,7 +33,7 @@
         </div>
 
         <div class="form-group">
-            @(this.Html.Label(Resources.Resource.Email, new { @class = "control-label col-md-2" }))
+            @(this.Html.Label(Resource.Email, new { @class = "control-label col-md-2" }))
             <div class="col-md-10">
                 @(this.Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } }))
                 @(this.Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" }))
@@ -40,7 +41,7 @@
         </div>
 
         <div class="form-group">
-            @(this.Html.Label(Resources.Resource.EmailConfirmation, new { @class = "control-label col-md-2" }))
+            @(this.Html.Label(Resource.EmailConfirmation, new { @class = "control-label col-md-2" }))
             <div class="col-md-10">
                 @(this.Html.EditorFor(model => model.EmailConfirmation, new { htmlAttributes = new { @class = "form-control" } }))
                 @(this.Html.ValidationMessageFor(model => model.EmailConfirmation, "", new { @class = "text-danger" }))
@@ -48,7 +49,7 @@
         </div>
 
         <div class="form-group">
-            @(this.Html.Label(Resources.Resource.Password, new { @class = "control-label col-md-2" }))
+            @(this.Html.Label(Resource.Password, new { @class = "control-label col-md-2" }))
             <div class="col-md-10">
                 @(this.Html.PasswordFor(model => model.Password, new { @class = "form-control" } ))
                 @(this.Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" }))
@@ -56,7 +57,7 @@
         </div>
 
         <div class="form-group">
-            @(this.Html.Label(Resources.Resource.PasswordConfirmation, new { @class = "control-label col-md-2" }))
+            @(this.Html.Label(Resource.PasswordConfirmation, new { @class = "control-label col-md-2" }))
             <div class="col-md-10">
                 @(this.Html.PasswordFor(model => model.PasswordConfirmation, new { @class = "form-control" }))
                 @(this.Html.ValidationMessageFor(model => model.PasswordConfirmation, "", new { @class = "text-danger" }))
@@ -64,7 +65,7 @@
         </div>
 
         <div class="form-group">
-            @(this.Html.Label(Resources.Resource.Sex, new { @class = "control-label col-md-2" }))
+            @(this.Html.Label(Resource.Sex, new { @class = "control-label col-md-2" }))
             <div class="col-md-10">
                 @(this.Html.EnumDropDownListFor(model => model.Sex, new { @class = "form-control" } ))
                 @(this.Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" }))
