--- a/ExitTask.Presentation/Views/Shared/Error.cshtml
+++ b/ExitTask.Presentation/Views/Shared/Error.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Error";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    this.ViewBag.Title = "Error";
+    this.Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="form-group">
     <h2>Error</h2>
     <div class="col-md-10">
         <h3>@(this.ViewData["ErrMsg"])</h3>
-        <h4>@this.ViewData["ErrTrace"]</h4>
+        <h4>@(this.ViewData["ErrTrace"])</h4>
     </div>
 </div>
