--- a/ExitTask.Presentation/Content/Site.css
+++ b/ExitTask.Presentation/Content/Site.css
@@ -1,15 +1,41 @@
-﻿body {
+﻿html {
+    position: relative;
+    min-height: 100%;
+    height: auto;
 }
 
-html {
-          position: relative;
-      min-height: 100%;
-      height: auto;
+.tour-grid, .tour-detail-grid {
+    margin: 0 auto;
+    font-family: 'Roboto', 'Helvetica', sans-serif;
+    max-width: 900px;
+    padding: 0;
+    width: 100%;
+    margin: 0 auto;
+    flex-shrink: 0;
 }
 
-.page-content {
-    /*margin: 0 auto;*/
-    /*overflow: hidden;*/
+.tour-detail-grid {
+}
+
+
+/*form {
+     margin: 0 auto;
+}*/
+
+label {
+    font-size: small
+}
+.demo-card-square.mdl-card {
+    width: 900px;
+    height: 320px;
+}
+
+.add-tour-card.mdl-card {
+    width: 900px;
+    height: 100%;
+}
+.demo-card-square > .mdl-card__title {
+    color: #fff;
 }
 
 input,
@@ -23,24 +49,24 @@ textarea, select {
 }
 
 
-.mdl-cell {
+/*.mdl-cell {
     background: white;
     z-index: 4;
     padding: 15px;
-}
+}*/
 
-.mdl-layout__content {
+/*.mdl-layout__content {
     display: -webkit-flex;
 	display: flex;
     -webkit-flex-direction: column;
 	        flex-direction: column;
-}
+}*/
 
 footer {
-  width: 100%;
-  height: 70px;
-  color: white;
-  background-color: black;
+    width: 100%;
+    height: 100px;
+    color: white;
+    background-color: black;
 }
 
 @font-face {
