--- a/ExitTask.Presentation/Areas/Common/Views/Home/Index.cshtml
+++ b/ExitTask.Presentation/Areas/Common/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ExitTask.Presentation.Helpers
-@model IEnumerable<ExitTask.Presentation.Areas.Common.Models.TourPreviewViewModel>
+@model IEnumerable<ExitTask.Presentation.Areas.Common.Models.TourViewModel>
 
 @{
     this.ViewBag.Title = "Index";
