--- a/ExitTask.Presentation/Views/Shared/_Header.cshtml
+++ b/ExitTask.Presentation/Views/Shared/_Header.cshtml
@@ -1,29 +1,32 @@
 ﻿@using Resources
 <header class="mdl-layout__header mdl-layout__header--transparent">
-        <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">This is a title of the page</span>
-            <div class="mdl-layout-spacer"></div>
-            <nav class="mdl-navigation">
-                <a class="mdl-navigation__link" href="">Link</a>
-                @if (this.User.Identity.IsAuthenticated)
-                {
-                    <a class="mdl-navigation__link" href="/Security/Authorization/SignOut">@Resource.SignOut</a>
-                }
-                else
-                {
-                    <a class="mdl-navigation__link" href="/Security/Registration/SignUp">@Resource.SignUp</a>
-                    <a class="mdl-navigation__link" href="/Security/Authorization/SignIn">@Resource.SignIn</a>
-                }
-                
-            </nav>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">@Resource.Management</span>
+    <div class="mdl-layout__header-row">
+        <div class="mdl-layout-spacer"></div>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">@Resource.Tours</a>
-            <a class="mdl-navigation__link" href="">@Resource.Countries</a>
-            <a class="mdl-navigation__link" href="">@Resource.Cities</a>
-            <a class="mdl-navigation__link" href="">@Resource.Hotels</a>
+
+            @if (this.User.Identity.IsAuthenticated)
+            {
+                <a class="mdl-navigation__link" href="/User/UserProfile/UserInfo">@Resource.UserInfo</a>
+                <a class="mdl-navigation__link" href="/Security/Authorization/SignOut">@Resource.SignOut</a>
+            }
+            else
+            {
+                <a class="mdl-navigation__link" href="/Security/Registration/SignUp">@Resource.SignUp</a>
+                <a class="mdl-navigation__link" href="/Security/Authorization/SignIn">@Resource.SignIn</a>
+            }
+
         </nav>
     </div>
+</header>
+@if (this.User.Identity.IsAuthenticated && this.User.IsInRole("Admin") )
+            {
+                <div class="mdl-layout__drawer">
+                    <span class="mdl-layout-title">@Resource.Management</span>
+                    <nav class="mdl-navigation">
+                        <a class="mdl-navigation__link" href="/Admin/TourManagement/AddTour">@Resource.Tours</a>
+                        <a class="mdl-navigation__link" href="/Admin/GeoManagement/AddCountry">@Resource.Countries</a>
+                        <a class="mdl-navigation__link" href="/Admin/GeoManagement/AddCity">@Resource.Cities</a>
+                        <a class="mdl-navigation__link" href="/Admin/GeoManagement/AddHotels">@Resource.Hotels</a>
+                    </nav>
+                </div>
+            }
